--- a/src/assets/styles/base/variables.css
+++ b/src/assets/styles/base/variables.css
@@ -18,6 +18,8 @@
     --font-size-h4: 45px;
     --font-size-h5: 40px;
     --font-size-h6: 20px;
+    --font-size-label15: 15px;
+    --font-size-label10: 10px;
   
     /* Espaçamentos */
     --spacing-200: 200%;
