--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 
 :root {
 
-  color: rgba(255, 255, 255, 0.87);
+  color: rgb(248, 248, 248);
   background-color: #242424;
 
   font-synthesis: none;
