--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,13 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+body{
+  overflow-x: hidden;
+  display: flex;
+  justify-content: center;
+}
+
+#root{
+  width: 100%;
+}
