--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,10 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+html {
+  font-size: 62.5%; /* 1rem = 10px */
+}
+
 body{
   overflow-x: hidden;
   display: flex;
