--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 html {
   font-size: 62.5%; /* 1rem = 10px */
 }
