--- a/src/assets/styles/base/variables.css
+++ b/src/assets/styles/base/variables.css
@@ -6,6 +6,7 @@
     --color-secondary: #0567F8;
     --color-tertiary: #0A33F1;
     --color-error: #F85C5C;
+    --off-white:#EEEEEE;
 
     /* Fontes */
     --font-family-grifter: 'Grifter', sans-serif;
