--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,8 @@
 :root {
 
   color: rgb(248, 248, 248);
-  background-color: #242424;
+  background-color: var(--off-white);
+
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -32,6 +33,8 @@ body {
   padding: 0;
   width: 100vw;
   height: 100vh; /* Garante que ocupe toda a altura da viewport, ajuste conforme necessário */
+  background-image: url("./assets/imgs/Grafismo.png");
+  background-size: cover;
 }
 
 /* @media (max-width: 1060px) {
