Finished Desktop Version for Card Component

--- a/src/assets/styles/base/variables.css
+++ b/src/assets/styles/base/variables.css
@@ -21,6 +21,7 @@
   --font-size-h4: 4.5rem;
   --font-size-h5: 4rem;
   --font-size-h6: 2rem;
+  --font-size-h7: 1.8rem;
   --font-size-label15: 1.5rem;
   --font-size-label10: 1rem;
 
