--- a/src/index.css
+++ b/src/index.css
@@ -50,3 +50,25 @@ body {
     font-size: var(--font-size-mbutton);
   }
 } */
+
+
+::-webkit-scrollbar {
+  width: var(--sb-size);
+}
+
+::-webkit-scrollbar-track {
+  background: var(--sb-track-color);
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--sb-thumb-color);
+  border-radius: 10px;
+}
+
+/* Estilizando a barra de rolagem para navegadores que não suportam WebKit */
+@supports not selector(::-webkit-scrollbar) {
+  body {
+    scrollbar-color: var(--sb-thumb-color) var(--sb-track-color);
+  }
+}
