Services Grid Created

--- a/src/assets/styles/base/variables.css
+++ b/src/assets/styles/base/variables.css
@@ -7,6 +7,7 @@
   --color-tertiary: #0A33F1;
   --color-error: #F85C5C;
   --off-white: #EEEEEE;
+  --grey1: #B5B5B5;
   --grey: #585858;
   --grey-shadow: rgb(88, 88, 88, 0.3);
   --black: #1E1B19;
