--- a/src/index.css
+++ b/src/index.css
@@ -35,9 +35,9 @@ body {
   margin: 0;
   padding: 0;
   width: 100vw;
-  background-image: url("./assets/imgs/Grafismo.png");
-  background-size: cover;
-  background-repeat: repeat-y;
+  background-image: url("./assets/imgs/Grafismo.svg");
+  background-size: contain;
+  background-repeat: repeat;
 }
 
 
