--- a/src/index.css
+++ b/src/index.css
@@ -35,9 +35,10 @@ body {
   margin: 0;
   padding: 0;
   width: 100vw;
-  background-image: url("./assets/imgs/Grafismo.svg");
-  background-size: contain;
-  background-repeat: repeat;
+  background-image: url("./assets/imgs/Grafismo.png");
+  background-repeat: repeat-y;
+  background-attachment: fixed;
+  background-size: cover;
 }
 
 
@@ -69,7 +70,7 @@ body {
   left: 0;
   width: 100%;
   height: 100vh;
-  background-color: var(--off-white);
+  background-color: red;
 
 
 
@@ -81,6 +82,6 @@ body {
   left: 0;
   width: 100%;
   height: 100vh;
-  background-color: var(--off-white);
+  background-color: red;
   transform-origin: top;
 }
