--- a/src/assets/styles/base/fonts.css
+++ b/src/assets/styles/base/fonts.css
@@ -5,6 +5,7 @@
     src: url('../../fonts/GRIFTERBold.woff2') format('woff2');
     font-weight: bold;
     font-style: normal;
+    font-display: swap;
   }
   
 @font-face {
@@ -12,4 +13,5 @@
     src: url('../../fonts/Helvetica.woff2') format('woff2');
     font-weight: normal;
     font-style: normal;
+    font-display: swap;
   }
