adjusted text size

--- a/src/assets/styles/base/variables.css
+++ b/src/assets/styles/base/variables.css
@@ -4,7 +4,7 @@
   /* Cores */
   --color-primary: #0590FA;
   --color-secondary: #0567F8;
-  --color-tertiary: #0A33F1;
+  --color-tertiary: rgb(10, 51, 241);
   --color-error: #F85C5C;
   --off-white: #EEEEEE;
   --grey1: #B5B5B5;
