fixed portfolio images

--- a/src/assets/styles/base/variables.css
+++ b/src/assets/styles/base/variables.css
@@ -10,7 +10,7 @@
   --grey1: #B5B5B5;
   --grey: #585858;
   --grey-shadow: rgb(88, 88, 88, 0.3);
-  --black: #1E1B19;
+  --black: rgb(30, 27, 25);
     /* Fontes */
     --font-family-grifter: 'Grifter', sans-serif;
   --font-family-helvetica: 'Helvetica', sans-serif;
